fixed email popup bug on mobile

--- a/src/components/EmailPopup/popup.css
+++ b/src/components/EmailPopup/popup.css
@@ -98,11 +98,11 @@ textarea {
 
     input {
         width: 100%;
-        height: 60px;
+        height: 50px;
     }
 
     textarea {
-        height: 200px;
+        height: 140px;
     }
 
     .submit-btn {
