--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -312,6 +312,10 @@ hr {
         background-color: #222;
     }
 
+    .middle-title {
+        font-size: 150%;
+    }
+
     .i-right {
         background-color: #222;
     }
